--- a/index.html
+++ b/index.html
@@ -7,11 +7,16 @@
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <title>Shop project</title>
   <link rel="stylesheet" href="reset.css">
+
+  <link rel="stylesheet" type="text/css" href="slick/slick.css" />
+  <link rel="stylesheet" type="text/css" href="slick/slick-theme.css" />
+
   <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
   <!-- HEADER -->
   <header class="header">
@@ -52,7 +57,7 @@
           </div>
           <div class="header_busket_btn">
             <a href="#"><img class="b-logo" src="img/Busket.png" alt=""></a>
-            <div class="amount">7</div>
+            <div id="amount" class="amount">0</div>
           </div>
         </div>
       </div>
@@ -60,11 +65,17 @@
   </header>
   <!-- MAIN -->
   <main class="main">
-    <div class="slider">
-      <div class="slider_container">
-        <p>Slide #</p>
+    <section class="slider">
+      <div class="main_menu">
+        <div class="col-12">
+          <div class="slider-block">
+            <div>Slide 1</div>
+            <div>Slide 2</div>
+            <div>Slide 3</div>
+          </div>
+        </div>
       </div>
-    </div>
+    </section>
     <div class="main_menu">
       <div class="main_menu_container">
         <div class="col_25">
@@ -174,7 +185,7 @@
                 <p class="screen-size"><span class="bold-type">SCREEN SIZE:</span> 7 inches</p>
                 <p class="ram"><span class="bold-type">RAM:</span> 1 GB</p>
                 <p class="price">$599.25</p>
-                <button class="block_details">MORE DETAILS</button>
+                <button class="block_details more-details">MORE DETAILS</button>
                 <div class="cart-block">
                   <button class="block_add">ADD TO CART</button>
                 </div>
@@ -192,7 +203,7 @@
                 <p class="screen-size"><span class="bold-type">SCREEN SIZE:</span> 7 inches</p>
                 <p class="ram"><span class="bold-type">RAM:</span> 1 GB</p>
                 <p class="price">$1250.99</p>
-                <button class="block_details">MORE DETAILS</button>
+                <button class="block_details more-details">MORE DETAILS</button>
                 <button class="block_add">ADD TO CART</button>
               </div>
             </div>
@@ -208,7 +219,7 @@
                 <p class="screen-size"><span class="bold-type">SCREEN SIZE:</span> 7 inches</p>
                 <p class="ram"><span class="bold-type">RAM:</span> 1 GB</p>
                 <p class="price">$399.50</p>
-                <button class="block_details">MORE DETAILS</button>
+                <button class="block_details more-details">MORE DETAILS</button>
                 <button class="block_add">ADD TO CART</button>
               </div>
             </div>
@@ -224,7 +235,7 @@
                 <p class="screen-size"><span class="bold-type">SCREEN SIZE:</span> 7 inches</p>
                 <p class="ram"><span class="bold-type">RAM:</span> 1 GB</p>
                 <p class="price">$599.25</p>
-                <button class="block_details">MORE DETAILS</button>
+                <button class="block_details more-details">MORE DETAILS</button>
                 <button class="block_add">ADD TO CART</button>
               </div>
             </div>
@@ -240,7 +251,7 @@
                 <p class="screen-size"><span class="bold-type">SCREEN SIZE:</span> 7 inches</p>
                 <p class="ram"><span class="bold-type">RAM:</span> 1 GB</p>
                 <p class="price">$1250.99</p>
-                <button class="block_details">MORE DETAILS</button>
+                <button class="block_details more-details">MORE DETAILS</button>
                 <button class="block_add">ADD TO CART</button>
               </div>
             </div>
@@ -256,7 +267,7 @@
                 <p class="screen-size"><span class="bold-type">SCREEN SIZE:</span> 7 inches</p>
                 <p class="ram"><span class="bold-type">RAM:</span> 1 GB</p>
                 <p class="price">$399.50</p>
-                <button class="block_details">MORE DETAILS</button>
+                <button class="block_details more-details">MORE DETAILS</button>
                 <button class="block_add">ADD TO CART</button>
               </div>
             </div>
@@ -272,7 +283,7 @@
                 <p class="screen-size"><span class="bold-type">SCREEN SIZE:</span> 7 inches</p>
                 <p class="ram"><span class="bold-type">RAM:</span> 1 GB</p>
                 <p class="price">$599.25</p>
-                <button class="block_details">MORE DETAILS</button>
+                <button class="block_details more-details">MORE DETAILS</button>
                 <button class="block_add">ADD TO CART</button>
               </div>
             </div>
@@ -288,7 +299,7 @@
                 <p class="screen-size"><span class="bold-type">SCREEN SIZE:</span> 7 inches</p>
                 <p class="ram"><span class="bold-type">RAM:</span> 1 GB</p>
                 <p class="price">$1250.99</p>
-                <button class="block_details">MORE DETAILS</button>
+                <button class="block_details more-details">MORE DETAILS</button>
                 <button class="block_add">ADD TO CART</button>
               </div>
             </div>
@@ -304,7 +315,7 @@
                 <p class="screen-size"><span class="bold-type">SCREEN SIZE:</span> 7 inches</p>
                 <p class="ram"><span class="bold-type">RAM:</span> 1 GB</p>
                 <p class="price">$399.50</p>
-                <button class="block_details">MORE DETAILS</button>
+                <button class="block_details more-details">MORE DETAILS</button>
                 <button class="block_add">ADD TO CART</button>
               </div>
             </div>
@@ -320,5 +331,39 @@
       © Copyright 2017
     </div>
   </footer>
+
+
+
+
+  <div class="modal">
+    <div class="modal-block">
+      <form action="">
+        <div class="btn-wrap">
+          <div class="btn-close">X</div>
+        </div>
+
+        <h3>Please call for more details</h3>
+        <div class="form-field">
+          <input type="text" placeholder="Your name">
+        </div>
+        <div class="form-field">
+          <input type="text" placeholder="Your phone">
+        </div>
+        <button>Please call</button>
+      </form>
+    </div>
+  </div>
+
+
+
+
+
+
+  <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+  <script type="text/javascript" src="slick/slick.min.js"></script>
+
+  <script src="app.js"></script>
 </body>
+
 </html>
