--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <title>Shop project</title>
   <link rel="stylesheet" href="reset.css">
 
-  <link rel="stylesheet" type="text/css" href="slick/slick.css" />
-  <link rel="stylesheet" type="text/css" href="slick/slick-theme.css" />
+  <link rel="stylesheet" type="text/css" href="slick/slick.css">
+  <link rel="stylesheet" type="text/css" href="slick/slick-theme.css">
 
   <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -72,6 +72,7 @@
             <div>Slide 1</div>
             <div>Slide 2</div>
             <div>Slide 3</div>
+            <div>Slide 4</div>
           </div>
         </div>
       </div>
@@ -185,6 +186,13 @@
                 <p class="screen-size"><span class="bold-type">SCREEN SIZE:</span> 7 inches</p>
                 <p class="ram"><span class="bold-type">RAM:</span> 1 GB</p>
                 <p class="price">$599.25</p>
+
+                <div class="product-quantity">
+                  <button class="decrement-btn">-</button>
+                  <input readonly type="text" value="1">
+                  <button class="increment-btn">+</button>
+                </div>
+
                 <button class="block_details more-details">MORE DETAILS</button>
                 <div class="cart-block">
                   <button class="block_add">ADD TO CART</button>
@@ -203,6 +211,11 @@
                 <p class="screen-size"><span class="bold-type">SCREEN SIZE:</span> 7 inches</p>
                 <p class="ram"><span class="bold-type">RAM:</span> 1 GB</p>
                 <p class="price">$1250.99</p>
+                <div class="product-quantity">
+                  <button class="decrement-btn">-</button>
+                  <input readonly type="text" value="1">
+                  <button class="increment-btn">+</button>
+                </div>
                 <button class="block_details more-details">MORE DETAILS</button>
                 <button class="block_add">ADD TO CART</button>
               </div>
@@ -219,6 +232,11 @@
                 <p class="screen-size"><span class="bold-type">SCREEN SIZE:</span> 7 inches</p>
                 <p class="ram"><span class="bold-type">RAM:</span> 1 GB</p>
                 <p class="price">$399.50</p>
+                <div class="product-quantity">
+                  <button class="decrement-btn">-</button>
+                  <input readonly type="text" value="1">
+                  <button class="increment-btn">+</button>
+                </div>
                 <button class="block_details more-details">MORE DETAILS</button>
                 <button class="block_add">ADD TO CART</button>
               </div>
@@ -235,6 +253,11 @@
                 <p class="screen-size"><span class="bold-type">SCREEN SIZE:</span> 7 inches</p>
                 <p class="ram"><span class="bold-type">RAM:</span> 1 GB</p>
                 <p class="price">$599.25</p>
+                <div class="product-quantity">
+                  <button class="decrement-btn">-</button>
+                  <input readonly type="text" value="1">
+                  <button class="increment-btn">+</button>
+                </div>
                 <button class="block_details more-details">MORE DETAILS</button>
                 <button class="block_add">ADD TO CART</button>
               </div>
@@ -251,6 +274,11 @@
                 <p class="screen-size"><span class="bold-type">SCREEN SIZE:</span> 7 inches</p>
                 <p class="ram"><span class="bold-type">RAM:</span> 1 GB</p>
                 <p class="price">$1250.99</p>
+                <div class="product-quantity">
+                  <button class="decrement-btn">-</button>
+                  <input readonly type="text" value="1">
+                  <button class="increment-btn">+</button>
+                </div>
                 <button class="block_details more-details">MORE DETAILS</button>
                 <button class="block_add">ADD TO CART</button>
               </div>
@@ -267,6 +295,11 @@
                 <p class="screen-size"><span class="bold-type">SCREEN SIZE:</span> 7 inches</p>
                 <p class="ram"><span class="bold-type">RAM:</span> 1 GB</p>
                 <p class="price">$399.50</p>
+                <div class="product-quantity">
+                  <button class="decrement-btn">-</button>
+                  <input readonly type="text" value="1">
+                  <button class="increment-btn">+</button>
+                </div>
                 <button class="block_details more-details">MORE DETAILS</button>
                 <button class="block_add">ADD TO CART</button>
               </div>
@@ -283,6 +316,11 @@
                 <p class="screen-size"><span class="bold-type">SCREEN SIZE:</span> 7 inches</p>
                 <p class="ram"><span class="bold-type">RAM:</span> 1 GB</p>
                 <p class="price">$599.25</p>
+                <div class="product-quantity">
+                  <button class="decrement-btn">-</button>
+                  <input readonly type="text" value="1">
+                  <button class="increment-btn">+</button>
+                </div>
                 <button class="block_details more-details">MORE DETAILS</button>
                 <button class="block_add">ADD TO CART</button>
               </div>
@@ -299,6 +337,11 @@
                 <p class="screen-size"><span class="bold-type">SCREEN SIZE:</span> 7 inches</p>
                 <p class="ram"><span class="bold-type">RAM:</span> 1 GB</p>
                 <p class="price">$1250.99</p>
+                <div class="product-quantity">
+                  <button class="decrement-btn">-</button>
+                  <input readonly type="text" value="1">
+                  <button class="increment-btn">+</button>
+                </div>
                 <button class="block_details more-details">MORE DETAILS</button>
                 <button class="block_add">ADD TO CART</button>
               </div>
@@ -315,6 +358,11 @@
                 <p class="screen-size"><span class="bold-type">SCREEN SIZE:</span> 7 inches</p>
                 <p class="ram"><span class="bold-type">RAM:</span> 1 GB</p>
                 <p class="price">$399.50</p>
+                <div class="product-quantity">
+                  <button class="decrement-btn">-</button>
+                  <input readonly type="text" value="1">
+                  <button class="increment-btn">+</button>
+                </div>
                 <button class="block_details more-details">MORE DETAILS</button>
                 <button class="block_add">ADD TO CART</button>
               </div>
@@ -349,7 +397,7 @@
         <div class="form-field">
           <input type="text" placeholder="Your phone">
         </div>
-        <button>Please call</button>
+        <button>Send</button>
       </form>
     </div>
   </div>
